--- a/turbo.json
+++ b/turbo.json
@@ -4,12 +4,12 @@
     "build": {
       "outputs": ["dist/**"]
     },
-    "check-types": {
-      "dependsOn": ["^check-types"]
-    },
     "dev": {
       "persistent": true,
       "cache": false
+    },
+    "start": {
+      "dependsOn": ["^build"]
     }
   }
 }
