--- a/web/package.json
+++ b/web/package.json
@@ -5,9 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "preview": "vite preview",
-    "postinstall": "prisma generate && prisma db push"
+    "build": "vite build",
+    "start": "vite preview"
   },
   "dependencies": {
     "@elysiajs/eden": "^1.2.0",
