--- a/package.json
+++ b/package.json
@@ -1,10 +1,6 @@
 {
   "name": "zapmax",
   "module": "index.ts",
-  "type": "module",
-  "scripts": {
-    "dev": "turbo dev"
-  },
   "devDependencies": {
     "@types/bun": "latest",
     "turbo": "^2.3.3"
@@ -12,9 +8,14 @@
   "peerDependencies": {
     "typescript": "^5.7.2"
   },
+  "packageManager": "bun@1.1.42",
+  "scripts": {
+    "dev": "turbo dev",
+    "start": "turbo start"
+  },
+  "type": "module",
   "workspaces": [
     "api",
     "web"
-  ],
-  "packageManager": "bun@1.1.42"
+  ]
 }
