--- a/api/package.json
+++ b/api/package.json
@@ -8,10 +8,12 @@
     "start": "pm2 start --interpreter ~/.bun/bin/bun src/index.ts"
   },
   "dependencies": {
+    "@grotto/logysia": "^0.1.6",
     "@prisma/client": "^6.1.0",
     "@whiskeysockets/baileys": "^6.7.9",
     "comlink": "^4.4.2",
     "elysia": "latest",
+    "elysia-helmet": "^2.0.0",
     "link-preview-js": "^3.0.13",
     "msgpackr": "^1.11.2",
     "pm2": "^5.4.3"
