adicionar gerencimento (parte 1)

--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
     "@grotto/logysia": "^0.1.6",
     "@prisma/client": "^6.1.0",
     "@whiskeysockets/baileys": "^6.7.9",
+    "bullmq": "^5.34.7",
     "comlink": "^4.4.2",
     "elysia": "latest",
     "elysia-helmet": "^2.0.0",
