--- a/web/package.json
+++ b/web/package.json
@@ -12,10 +12,15 @@
   "dependencies": {
     "@elysiajs/eden": "^1.2.0",
     "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@tanstack/react-query": "^5.62.15",
     "@tanstack/react-table": "^8.20.6",
     "api": "workspace:*",
@@ -27,6 +32,7 @@
     "preact": "^10.25.3",
     "qrcode.react": "^4.2.0",
     "react-hook-form": "^7.54.2",
+    "recharts": "^2.15.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
