--- a/web/package.json
+++ b/web/package.json
@@ -23,11 +23,14 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@tanstack/react-query": "^5.62.15",
     "@tanstack/react-table": "^8.20.6",
+    "@tanstack/react-virtual": "^3.11.2",
     "api": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "lucide-react": "^0.469.0",
+    "minio": "^8.0.3",
+    "msgpackr": "^1.11.2",
     "next-themes": "^0.4.4",
     "preact": "^10.25.3",
     "qrcode.react": "^4.2.0",
