--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@grotto/logysia": "^0.1.6",
     "@prisma/client": "^6.2.1",
-    "baileys": "github:WhiskeySockets/Baileys",
+    "@whiskeysockets/baileys": "^6.7.12",
     "bullmq": "^5.36.0",
     "comlink": "^4.4.2",
     "elysia": "latest",
